# fiducia-sync

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  shell
.github/: README.md  dependabot.yml
.github/workflows/: README.md  ci.yml
.nix/: README.md  flake.nix
crates/postgres/: Cargo.toml
crates/postgres/migrations/: 001_fiducia_sync.sql
crates/postgres/src/: lib.rs
crates/postgres/tests/: postgres_integration.rs
dart/: CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
dart/lib/: fiducia_sync.dart
dart/lib/src/: client.dart  core.dart  hlc.dart  json_transport.dart  models.dart  policy.dart  schema.dart  sqlite_store.dart  store.dart  supabase_transport.dart  sync_schema.dart  telemetry.dart
dart/test/: client_test.dart  core_test.dart  hlc_schema_test.dart  json_transport_test.dart  policy_test.dart  sqlite_store_test.dart  supabase_transport_test.dart  syncedat_test.dart
docs/: README.md  jsonb-merge.md  timestamps.md  validation.md  write-policies-and-replication.md
schema/: sync.schema.json
schema/fixtures/: hlc-vectors.json  sync-envelopes.json
sdk/: README.md  package-lock.json  package.json
sdk/admin/: README.md  entry.mjs
sdk/scripts/: allow-generated-wasm-in-npm.mjs  embed-sync-schema.mjs
sdk/src/: README.md  client.mjs  core.mjs  hlc.mjs  htmx.mjs  index.d.ts  index.mjs  local-storage.mjs  merge.mjs  policy.mjs  start.mjs  store.mjs  sync-schema.mjs  telemetry.mjs  validate.mjs  webstorage.mjs
sdk/src/transports/: README.md  backend.mjs  decode.mjs  supabase.mjs
sdk/tests/: README.md  adversarial.test.mjs  backend.test.mjs  client.test.mjs  hlc.test.mjs  jsonb-hardening.test.mjs  jsonb.test.mjs  local-storage.test.mjs  policy.test.mjs  pull.test.mjs  schema-drift.test.mjs  store.test.mjs  syncedat.test.mjs  telemetry.test.mjs  transports.test.mjs  types.test.ts  validate.test.mjs  webstorage.test.mjs
sql/postgres/: 001_fiducia_sync.sql
src/: README.md  hlc.rs  lib.rs  policy.rs  schema.rs  wasm.rs
tests/: README.md  core_edge.rs  shared_fixtures.rs
