[workspace]
members = ["crates/postgres"]
default-members = [".", "crates/postgres"]
resolver = "2"

# Crate manifest for fiducia-sync-core: the transport-agnostic sync core. Builds
# as both rlib (native tests + server-side reuse) and cdylib (wasm); wasm-bindgen
# is gated behind the optional `wasm` feature.
[package]
name = "fiducia-sync-core"
version = "0.2.0"
edition = "2021"
description = "Transport-agnostic local-first sync core (version reconciliation + write-queue) for fiducia.cloud. Builds native for tests and to wasm for the @fiducia/sync SDK; the same crate is reusable server-side."
license = "MIT"
repository = "https://github.com/fiducia-cloud/fiducia-sync"
include = ["/src/**", "/tests/**", "/Cargo.toml", "/README.md", "/LICENSE"]

[lib]
# rlib for native unit tests + server-side reuse; cdylib for the wasm build.
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# wasm-bindgen is only pulled in for the browser build (see src/wasm.rs, behind
# the `wasm` feature) so native `cargo test` stays lean.
wasm-bindgen = { version = "0.2", optional = true }

[features]
wasm = ["dep:wasm-bindgen"]

[dev-dependencies]
# Integration tests (tests/core_edge.rs) construct ChangeEvent rows + assert the
# exact JSON the wasm ABI emits. serde_json is already a runtime dep; this exposes
# it to the separate integration-test crate.
serde_json = "1"

# wasm-pack's bundled wasm-opt can lag Rust's emitted WebAssembly features and
# currently rejects the multi-table module produced by stable rustc. The crate
# is already compiled with Cargo's release profile, so keep packaging portable
# instead of failing the build in an incompatible post-processing binary.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
